--- a/soapservice/pom.xml
+++ b/soapservice/pom.xml
@@ -32,6 +32,8 @@
 		<org.mapstruct.version>1.6.0.RC1</org.mapstruct.version>
 	</properties>
 	<dependencies>
+
+		<!--	Main project dependencies	-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web-services</artifactId>
@@ -53,12 +55,20 @@
 			<artifactId>wsdl4j</artifactId>
 		</dependency>
 
+		<!--	Testing		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
+		<!--	Tools	-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -84,6 +94,8 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<!--	Generate source classes from xsd contract	-->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jaxb2-maven-plugin</artifactId>
@@ -105,6 +117,7 @@
 				</configuration>
 			</plugin>
 
+			<!--	Annotation processing	-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
