feat: dockerfile and properties config
added dockerfile and updated properties file to use environment variables for main configuration

--- a/restservice/src/main/resources/application.properties
+++ b/restservice/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+logging.level.root=INFO
+server.servlet.context-path=/restservice
 spring.application.name=restservice
+
+
+soapservice-base.url=${SOAP_SERVICE_URL}
+
